--- a/app/public/wp-content/themes/philosophy/login/login-styles.css
+++ b/app/public/wp-content/themes/philosophy/login/login-styles.css
@@ -48,8 +48,19 @@ body.login div#login form#loginform input#user_pass {
 body.login div#login form#loginform p.forgetmenot {}
 body.login div#login form#loginform p.forgetmenot input#rememberme {}
 body.login div#login form#loginform p.submit {}
-body.login div#login form#loginform p.submit input#wp-submit {}
+/*body.login div#login form#loginform p.submit input#wp-submit {}*/
+body.login div#login form#loginform p.submit input#wp-submit {
+    width: 100%;
+    padding: 8px 20px;
+    height: 49px;
+    border-radius: 50px;
+    font-weight: 700;
+    font-size: 18px;
+    font-family: sans-serif;
+    margin: 25px 0;
+}
 body.login div#login p#nav {}
+
 body.login div#login p#nav a, body.login div#login p#backtoblog a {
 	color: #fff;
 }
