১০.৫ - এনকিউএর সহজ একটা পদ্ধতি ( অ্যারে কিভ্যালু)
১০.৫ - এনকিউএর সহজ একটা পদ্ধতি ( অ্যারে কিভ্যালু)

--- a/app/public/wp-content/themes/philosophy/login/login-styles.css
+++ b/app/public/wp-content/themes/philosophy/login/login-styles.css
@@ -28,6 +28,7 @@ body.login div#login form#loginform {
     border-radius: 13px;
     background: #200822;
     color: #fff;
+    padding-bottom: 0;
 }
 body.login div#login form#loginform p {}
 body.login div#login form#loginform p label {}
